syntax = "proto3";
package pb;

option go_package = "github.com/hosseintrz/torob/supplier/pb";

message AddStoreReq{
  string ownerId = 1;
  string storeName = 2;
  string storeUrl = 3;
  string city = 4;
}
message AddStoreRes{
  string response = 1;
}

message OfferReq{
  string storeId = 1;
  string productId = 2;
  int32  price = 3;
  string url = 4;
  string description = 5;
}
message OfferRes{
  string response = 1;
}

message ProdOfferReq{
  string productId = 1;
}
message ProdOfferRes{
  string storeName = 1;
  string storeCity = 2;
  int32 price = 3;
  string prodDesc = 4;
  string url = 5;
}

service Supplier{
  rpc SubmitOffer(OfferReq) returns (OfferRes) {};
  rpc AddStore(AddStoreReq) returns (AddStoreRes){};
  rpc GetProductOffers(ProdOfferReq) returns (stream ProdOfferRes){};
}